--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,36 @@
-# Core ML Framework
-torch>=2.1.0
-transformers>=4.35.0
-accelerate>=0.25.0
-peft>=0.7.0
-bitsandbytes>=0.41.0
-
-# Data Processing
-datasets>=2.15.0
-pandas>=2.0.0
-numpy>=1.24.0
-scikit-learn>=1.3.0
-
-# Evaluation Metrics
-evaluate>=0.4.0
+transformers>=4.36.2
+accelerate>=0.26.1
+sentencepiece>=0.1.99
+protobuf>=3.20.0
+peft>=0.7.1
+bitsandbytes>=0.41.3
+librosa>=0.10.1
+soundfile>=0.12.1
+audioread>=3.0.1
+resampy>=0.4.2
+datasets>=2.16.0
+numpy>=1.24.3,<2.0.0
+pandas>=2.0.3
+scikit-learn>=1.3.2
+scipy>=1.11.4
+evaluate>=0.4.1
 rouge-score>=0.1.2
-nltk>=3.8.0
-sacrebleu>=2.3.0
-
-# UI & API
+nltk>=3.8.1
+sacrebleu>=2.3.1
+jiwer>=3.0.3
+bert-score>=0.3.13
 gradio>=4.8.0
-fastapi>=0.104.0
-uvicorn>=0.24.0
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
 pydantic>=2.5.0
-
-# Deployment & Optimization
+python-multipart>=0.0.6
+aiofiles>=23.2.1
 onnx>=1.15.0
-onnxruntime>=1.16.0
-onnxruntime-gpu>=1.16.0  # Optional, for GPU inference
-optimum[onnxruntime]>=1.14.0
-
-# Utilities
+onnxruntime-gpu>=1.16.3
+optimum[onnxruntime]>=1.16.1
 python-dotenv>=1.0.0
-tqdm>=4.66.0
-python-multipart>=0.0.6  # For file uploads in FastAPI
-aiofiles>=23.2.0
-
-# Logging & Monitoring
-tensorboard>=2.15.0
-wandb>=0.16.0  # Optional, for experiment tracking
-
-# Testing
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-httpx>=0.25.0  # For testing FastAPI
-
-# Documentation
-mkdocs>=1.5.0  # Optional, for docs
-mkdocs-material>=9.4.0  # Optional, theme
-
-# Code Quality
-black>=23.11.0  # Code formatter
-flake8>=6.1.0  # Linter
-mypy>=1.7.0  # Type checker
-
-# Audio (if adding voice input)
-# sounddevice>=0.4.6
-# soundfile>=0.12.1
-# webrtcvad>=2.0.10
-
-# Medical NLP (optional enhancements)
-# spacy>=3.7.0
-# scispacy>=0.5.3
-# medspacy>=0.2.0
+tqdm>=4.66.1
+pyyaml>=6.0.1
+huggingface-hub>=0.20.0
+tensorboard>=2.15.1
+wandb>=0.16.1
