v2 training complete: GPT-4o data pipeline + LoRA fine-tuning -Scraped old pipeline due to subpar results on inference. Data pipeline rebuild: - 3-script pipeline: filter_mtsamples → generate_soap_gpt4o → prepare_training_data - 1002 MTSamples filtered to encounter-type notes (19 specialties) - 891 SOAP notes generated via GPT-4o with anti-hallucination constraints - 712 train / 89 val / 90 test (stratified split, verified no overlap)
Training (RTX 5070 Ti, 33 min):
- MedGemma 1.5-4B, LoRA r=16 alpha=32 dropout=0.1
- 4-bit NF4 quantization, batch=2 grad_accum=8 (eff=16)
- LR 2e-5, cosine schedule, 5 epochs
- Train loss: 0.828, Val loss: 0.782 (good generalization)

Quality metrics (88/100 avg):
- 0% WNL shortcuts (was present in v1)
- 4.3 PLAN items avg, 70 words (v1: 1 truncated line)
- 64% correctly use 'Not documented' for missing data
- 175 word median output (concise but complete)

Known issues to fix:
- 12% repetition (starts second SOAP note)
- 81% section completeness (related to repetition)
- 39.8s inference (need GPTQ for sub-20s Edge AI target)

--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,7 @@ huggingface-hub>=0.20.0
 tensorboard>=2.18.0
 wandb>=0.16.0
 matplotlib>=3.9.0
+openai>=1.61.0
 
 # Training (LoRA alternative without bitsandbytes)
 trl>=0.8.0
